--- a/register.html
+++ b/register.html
@@ -94,7 +94,9 @@
     </style>
 </head>
 <body>
-
+<div class="logo-container text-center mb-4">
+    <img src="logo.jpg" alt="Pune Seva Logo" class="img-fluid" style="max-width: 150px;">
+</div>
 <div class="container-fluid register-container">
     <div class="row g-0 w-100">
         <!-- Image Side -->
@@ -110,6 +112,9 @@
                     </div>
                     <div class="mb-3">
                         <input type="text" class="form-control" id="name" name="name" placeholder="Name" required>
+                    </div>
+                    <div class="mb-3">
+                        <input type="date" class="form-control" id="birthdate" name="birthdate" required>
                     </div>
                     <div class="mb-3">
                         <input type="text" class="form-control" id="username" name="username" placeholder="Username" required>
