--- a/login.html
+++ b/login.html
@@ -90,7 +90,9 @@
     </style>
 </head>
 <body>
-
+<div class="logo-container text-center mb-4">
+    <img src="logo.jpg" alt="Pune Seva Logo" class="img-fluid" style="max-width: 150px;">
+</div>
 <div class="container-fluid login-container">
     <div class="row g-0 w-100">
         <!-- Image Side -->
