--- a/register.html
+++ b/register.html
@@ -6,7 +6,6 @@
     <title>Registration Page</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
     <style>
         /* Custom Styles */
         .register-container {
@@ -94,9 +93,6 @@
     </style>
 </head>
 <body>
-<div class="logo-container text-center mb-4">
-    <img src="logo.jpg" alt="Pune Seva Logo" class="img-fluid" style="max-width: 150px;">
-</div>
 <div class="container-fluid register-container">
     <div class="row g-0 w-100">
         <!-- Image Side -->
@@ -106,7 +102,7 @@
         <div class="col-md-6 d-flex justify-content-center align-items-center">
             <div class="register-form text-center">
                 <h2>Register</h2>
-                <form action="/register" method="post" onsubmit="return hashPassword()">
+                <form action="/register" method="post">
                     <div class="mb-3">
                         <input type="email" class="form-control" id="email" name="email" placeholder="Email" required>
                     </div>
@@ -123,10 +119,7 @@
                         <input type="password" class="form-control" id="password" name="password" placeholder="Password" required>
                     </div>
                     <div class="mb-3">
-                        <input type="tel" class="form-control" id="phone" name="phone" placeholder="Phone Number" required>
-                    </div>
-                    <div class="mb-3">
-                        <input type="text" class="form-control" id="pincode" name="pincode" placeholder="Pincode" required>
+                        <input type="tel" class="form-control" id="phone_number" name="phone_number" placeholder="Phone Number" required>
                     </div>
                     <button type="submit" class="btn btn-custom w-100 mb-3">Register</button>
                 </form>
@@ -146,27 +139,5 @@
 
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-
-<!-- Password Hashing Script -->
-<script>
-    async function hashPassword() {
-        const passwordField = document.getElementById('password');
-        const password = passwordField.value;
-
-        // Hash the password using SHA-256
-        const encoder = new TextEncoder();
-        const data = encoder.encode(password);
-        const hashBuffer = await crypto.subtle.digest('SHA-256', data);
-        const hashArray = Array.from(new Uint8Array(hashBuffer));
-        const hashedPassword = hashArray.map(byte => byte.toString(16).padStart(2, '0')).join('');
-
-        // Set the hashed password in the form field
-        passwordField.value = hashedPassword;
-
-        // Allow form submission
-        return true;
-    }
-</script>
-
 </body>
 </html>
